<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- APP -->
    <string name="app_name">DiquarksAgri</string>

    <!-- PLANTS -->
    <string name="plant_pasteque">Pastèque rouge</string>
    <string name="plant_poivron">Poivron</string>
    <string name="plant_piment">Piment fort</string>
    <string name="plant_tomate">Tomate</string>
    <string name="plant_souihla">Souihla</string>
    <string name="plant_melon">Melon</string>
    <string name="plant_concombre">Concombre</string>
    <string name="plant_aubergine">Aubergine</string>

    <!-- LOGIN -->
    <string name="title_activity_login">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter ou s'inscrire</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="welcome">Bienvenue !</string>
    <string name="invalid_username">Nom d'utilisateur invalide</string>
    <string name="invalid_password">Le mot de passe doit contenir plus de 5 caractères</string>
    <string name="login_failed">Échec de connexion</string>

    <!-- UI LOGIN SCREEN -->
    <string name="welcome_title">BIENVENUE</string>
    <string name="email_hint">Email ou Téléphone</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login">SE CONNECTER</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="register">S'inscrire</string>

</resources>